k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yeet
spec:
  selector:
    app: yeet
  ports:
    - port: 80
      targetPort: 8080
  # Use ClusterIP if you have an Ingress controller.
  # Change to LoadBalancer to get a public IP directly from your cloud provider.
  type: ClusterIP
